Fix class page alignment

--- a/src/styles/class.css
+++ b/src/styles/class.css
@@ -3,7 +3,9 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 25px;
+    width: 70%;
+    margin: 0 auto;
 }
 
 .class-page-content-center {
